# Dissertation

./: .gitignore
glasm-scan-matching/: .gitignore  CMakeLists.txt
glasm-scan-matching/experiments/example2-player-stage/: errvsiter.csv  glasm.ini  sm.ini
glasm-scan-matching/experiments/example2-player-stage/scans/: scan0  scan1  scan10  scan100  scan101  scan102  scan103  scan104  scan105  scan106  scan107  scan108  scan109  scan11  scan110  scan111  scan112  scan113  scan114  scan115  scan116  scan117  scan118  scan119  scan12  scan120  scan121  scan122  scan123  scan124  scan125  scan126  scan127  scan128  scan129  scan13  scan130  scan131  scan132  scan133  (+460 more)
glasm-scan-matching/src/: glasm.cpp  glasm_aux.cpp  icp_aux.cpp  mbicp_aux.cpp  polarga_aux.cpp  sm_cli.cpp
implementation/: algorithms.py  combiner.py  custom.py  deap_custom.py  ga.py  ga_banded.py  landscape.py  refmap.py  run.sh  scanreader.py  split_mutation.py  test.py  util.py
implementation/code/oldcode/: custom.py  ga_banded.py  split_mutation.py
implementation/code/src/: ga.py  ga_elite.py  ga_elite_elitism_sweep.py  ga_elite_pop_gen_sweep.py  ga_elite_zeno.py  ga_sweep.py  glasm.py  mutpb_test.py  ngen_test.py
implementation/code/tools/: combiner.py  landscape.py  landscape_lookup.py
implementation/code/util/: deap_custom.py  util.py
implementation/data/: scan0
implementation/src/: ga.py  ga_banded.py  ga_elite.py  glasm.py  mutpb_test.py  ngen_test.py
implementation/src/oldcode/: custom.py  ga_banded.py  split_mutation.py
implementation/src/util/: deap_custom.py  lookupmap.py  scanreader.py  util.py
implementation/tools/: landscape.py  test.py
report/: CTAP.sublime-project  UoYCSproject.cls  dissertation.tex  references.bib  report.tex
report/data/benchmark/: mutsize.csv
report/data/conclusion/: graph.csv  refmap.csv  scan.csv
report/data/elite/: elitism.csv  mutsize.csv
report/data/ga_vs_elite/: time_limited_buckets.csv
report/data/icp/: grid_vs_icp.csv
report/data/map_density/: tol0.1.csv  tol0.2.csv  tol0.5.csv  tol0.csv
report/data/rand_vs_grid/: stdev.csv  timesweep.csv
report/data/scan_in_map/: pose.csv  scan110.csv
